--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 <body>
     <header>
         <nav class="container">
-            <div class="logo">🍔 FastBite</div>
+            <div class="logo">🍔 Comida Anabólica</div>
             <ul class="nav-links">
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#menu">Menú</a></li>
