--- a/ComidaAnabolicaWeb/index.html
+++ b/ComidaAnabolicaWeb/index.html
@@ -43,17 +43,17 @@
 
     <div class="row text-center">
       <div class="col-md-4">
-        <img src="imagenes/imagen-primer-plano-cocinero-colocando-tocino-frito-sobre-rebanada-queso-mientras-coloca-hamburguesa-capas_181624-57745.jpg" class="img-fluid rounded mb-3" alt="Ingredientes frescos">
+        <img src="img/ingredientes.jpg" class="img-fluid rounded mb-3" alt="Ingredientes frescos">
         <h4>Ingredientes frescos</h4>
         <p>Preparados en el momento, nada del día anterior.</p>
       </div>
       <div class="col-md-4">
-        <img src="imagenes/hamburguesa_formato_monster.jpg" class="img-fluid rounded mb-3" alt="Comida reconfortante">
+        <img src="img/comida.jpg" class="img-fluid rounded mb-3" alt="Comida reconfortante">
         <h4>Comida reconfortante</h4>
         <p>Platos sencillos y populares, preparados con esmero.</p>
       </div>
       <div class="col-md-4">
-        <img src="imagenes/istockphoto-592003518-612x612.jpg" class="img-fluid rounded mb-3" alt="Bebidas energéticas">
+        <img src="img/bebida.jpg" class="img-fluid rounded mb-3" alt="Bebidas energéticas">
         <h4>Mejores bebidas</h4>
         <p>Energéticas altas en cafeína para el mejor entreno.</p>
       </div>
