cambie las dimensiones de las imagenes

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         <p>Preparados en el momento, nada del día anterior.</p>
       </div>
       <div class="col-md-4">
-        <img src="imagenes/hamburguesa_formato_monster.jpg" class="img-fluid rounded mb-3" alt="Comida reconfortante">
+        <img src="imagenes/imagen_plato.jpg" class="img-fluid rounded mb-3" alt="Comida reconfortante">
         <h4>Comida reconfortante</h4>
         <p>Platos sencillos y populares, preparados con esmero.</p>
       </div>
       <div class="col-md-4">
-        <img src="imagenes/istockphoto-592003518-612x612.jpg" class="img-fluid rounded mb-3" alt="Bebidas energéticas">
+        <img src="imagenes/imagen_salida.jpg" class="img-fluid rounded mb-3" alt="Bebidas energéticas">
         <h4>Mejores bebidas</h4>
         <p>Energéticas altas en cafeína para el mejor entreno.</p>
       </div>
